--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -21,8 +21,9 @@ body {
 }
 #button {
     position: relative;
-    top: -55px;
-    left: 345px;
+    top: -90px;
+    left: 500px;
+    width: 300px;
 }
 #save {
     font-size: 120%;
@@ -46,4 +47,29 @@ li {
     border: 1px solid #fff;
     width: 50px;
     height: 50px;
+}
+
+#console{
+	position: absolute;
+	top: 600px;
+    background-color: grey;
+    width: 780px;
+    padding: 10px;
+    height: 100px;
+}
+
+#palette{
+	width:260px;
+	display: table;
+    border-collapse: separate;
+    border-spacing: 0px;
+    border-color: grey;
+}
+.palette_cell{
+	font-weight: bold;
+    text-align: center;
+    display: table-cell;
+    vertical-align: inherit;
+    width:10px;
+	height:9px;
 }
