--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -4,8 +4,16 @@ body {
     margin: 0;
     background-color:#000;
 }
+#login_body {
+    background-image:url("images/login_back.jpg");
+    background-repeat: no-repeat;
+}
 ::-webkit-scrollbar {
   display: none;
+}
+#title {
+    font-family: Montserrat, "Helvetica Neue", sans-serif;
+    font-size: 140px;
 }
 .button {
     background: #1a1a1a;
@@ -27,13 +35,17 @@ body {
 }
 #save {
     font-size: 120%;
-    width: 80px;
+    width: 50px;
     height: 50px;
+    background-image:url("images/save.png");
+    background-repeat: no-repeat;
 }
 #clear {
     font-size: 120%;
-    width: 80px;
+    width: 50px;
     height: 50px;
+    background-image:url("images/delete.png");
+    background-repeat: no-repeat;
 }
 ul {
     margin: 0;
@@ -56,12 +68,15 @@ li {
     width: 780px;
     padding: 10px;
     height: 100px;
+    background-image:url("images/toolbar.jpg");
+    background-repeat: no-repeat;
 }
 
 #palette{
 	width:260px;
 	display: table;
-    border-collapse: separate;
+    border-collapse:collapse;
+    border: 2px ridge;
     border-spacing: 0px;
     border-color: grey;
 }
