--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -45,7 +45,7 @@ body {
 }
 #panel_button {
     position: absolute;
-    top: 10px;
+    top: 35px;
     left: 300px;
     width: 300px;
 }
@@ -106,17 +106,16 @@ li {
 #panel_console{
 	position: absolute;
 	top: 600px;
-    background-color: grey;
-    width: 780px;
-    padding: 10px;
-    height: 56px;
-    background-image:url("images/toolbar.jpg");
+    width: 800px;
+    height: 100px;
+    background-image:url("images/torn.png");
     background-repeat: no-repeat;
 }
 
 #palette{
 	position: absolute;
-	top:5px;
+	top:30px;
+	left:15px;
 	width:260px;
 	display: table;
     border-collapse:collapse;
