--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -7,6 +7,9 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
+canvas{
+	cursor:url(images/pencil.png),auto;
+}
 #panel_canvas{
 	width:800px;
 	height:600px;
@@ -69,7 +72,7 @@ body {
     font-size: 120%;
     width: 56px;
     height: 56px;
-    background-image:url("");
+    background-image:url("images/upload.png");
     background-repeat: no-repeat;
     background-position: center center; 
 }
