--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -56,7 +56,7 @@ canvas{
     font-size: 120%;
     width: 56px;
     height: 56px;
-    background-image:url("");
+    background-image:url("images/pencil_ic.png");
     background-repeat: no-repeat;
     background-position: center center; 
 }
@@ -64,7 +64,7 @@ canvas{
     font-size: 120%;
     width: 56px;
     height: 56px;
-    background-image:url("");
+    background-image:url("images/text.png");
     background-repeat: no-repeat;
     background-position: center center; 
 }
