--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -131,7 +131,7 @@ li {
     height: 50px;
 }
 
-div.console1{
+div.Paper{
 	position: absolute;
 	top: 600px;
     width: 800px;
@@ -139,12 +139,22 @@ div.console1{
     background-image:url("images/torn.png");
     background-repeat: no-repeat;
 }
-div.console2{
+div.Modern{
 	position: absolute;
 	top: 600px;
     width: 800px;
     height: 100px;
     background-color: grey;
+}
+#panel_theme{
+	position: absolute;
+	top:10px;
+	left:15px;
+}
+#select_theme{
+	position: absolute;
+	top:0px;
+	left:50px;
 }
 #palette{
 	position: absolute;
