--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -65,6 +65,14 @@ canvas{
     top: 35px;
     left: 740px;
 }
+
+#progress{
+	position: absolute;
+    top: 22px;
+    left: 0px;
+    height: 7px;
+	width: 800px;
+}
 .tool_button {
 	font-size: 120%;
     width: 56px;
