--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -65,7 +65,6 @@ canvas{
     top: 35px;
     left: 740px;
 }
-
 #progress{
 	position: absolute;
     top: 22px;
@@ -73,23 +72,75 @@ canvas{
     height: 7px;
 	width: 800px;
 }
-.tool_button {
+div.Paper{
+	position: absolute;
+	top: 600px;
+    width: 800px;
+    height: 100px;
+    background-image:url("images/torn.png");
+    background-repeat: no-repeat;
+}
+div.Modern{
+	position: absolute;
+	top: 600px;
+    width: 800px;
+    height: 100px;
+    background-color: #D3D3D3;
+}
+input.tool_button {
 	font-size: 120%;
     width: 56px;
     height: 56px;
-    background-image:url("images/pencil_ic.png");
     float: left;
     padding :1px 6px;
     margin-right: 2px;
     background-repeat: no-repeat;
     background-position: center center;
 }
-#tool_pen { background-image:url("images/pencil_ic.png") }
-#tool_text { background-image:url("images/text.png") }
-#tool_save { background-image:url("images/save.png") }
-#tool_clear { background-image:url("images/delete.png") }
-#tool_newp{ background-image:url("images/newp.png") }
-#tool_delp{ background-image:url("images/delp.png") }
+input.Paper{
+	background-color: buttonface;
+}
+input.Modern{
+	background-color: orange;
+}
+input.Paper#tool_pen{
+	background-image:url("images/pencil_ic.png");
+	}
+input.Paper#tool_text{
+	background-image:url("images/text.png");
+	}
+input.Paper#tool_save{
+	background-image:url("images/save.png");
+	}
+input.Paper#tool_clear { 
+	background-image:url("images/delete.png");
+	}
+input.Paper#tool_newp{ 
+	background-image:url("images/newp.png");
+	}
+input.Paper#tool_delp{ 
+	background-image:url("images/delp.png");
+	}
+	
+input.Modern#tool_pen{ 
+	background-image:url("images/pencil_ic.png");
+	}
+input.Modern#tool_text{
+	background-image:url("images/text.png");
+	}
+input.Modern#tool_save{
+	background-image:url("images/save.png");
+	}
+input.Modern#tool_clear { 
+	background-image:url("images/delete.png");
+	}
+input.Modern#tool_newp{ 
+	background-image:url("images/newp.png");
+	}
+input.Modern#tool_delp{ 
+	background-image:url("images/delp.png");
+	}
+
 #tool_image_surface {
 	padding: 0px;
     border-top: 1px solid #DDD;
@@ -98,6 +149,7 @@ canvas{
     border-bottom: 1px solid #888;
     background-repeat: no-repeat;
     background-position: center center;
+    background-image:url("images/pencil_ic.png");
 }
 #panel_meter {
     position: absolute;
@@ -119,22 +171,6 @@ li {
     border: 1px solid #fff;
     width: 50px;
     height: 50px;
-}
-
-div.Paper{
-	position: absolute;
-	top: 600px;
-    width: 800px;
-    height: 100px;
-    background-image:url("images/torn.png");
-    background-repeat: no-repeat;
-}
-div.Modern{
-	position: absolute;
-	top: 600px;
-    width: 800px;
-    height: 100px;
-    background-color: grey;
 }
 #panel_theme{
 	position: absolute;
