--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -80,6 +80,14 @@ canvas{
 	width: 800px;
 }
 
+.point{
+	position: absolute;
+    top: 593px;
+    left: 0px;
+    height: 7px;
+	width: 800px;
+}
+
 #panel_console.Paper{
 	position: absolute;
 	top: 600px;
