--- a/WebContent/idraw.css
+++ b/WebContent/idraw.css
@@ -311,3 +311,16 @@ li {
 	position:absolute;
 	left:50px;
 }
+#loginButton{
+	width:100px;
+	position:absolute;
+	margin-left: 260px;
+	margin-top: 350px;
+}
+#signUpButton{
+	width:100px;
+	position:absolute;
+	margin-left: 440px;
+	margin-top: 350px;
+	background-color: grey;
+}
